# AILA

./: .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  _health_check.ps1  dump.rdb  honesty_whitelist.py  migrate.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quote  requirements-dev.txt  requirements.txt  start-linux.sh  start.sh  start_worker.py  stop.sh  vulture_whitelist.py
.claude/: CLAUDE.md
.claude/rules/: frontend-typescript.md  frontend-workspace.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.interface-design/: system.md
cache/: crash_counts.json
cache/210fcbc181f93bfe444e10af13928424d27be2a3473837488c5a8064d233ab04/: request_queue.jsonl  state.json
cache/44998a8c58cb9dd586ad0d5efbfe1fc044be023d5b9d755dbd78c50839a4cb9e/: request_queue.jsonl  state.json
cache/9228be90bf0bc3c4248431d2f2acb96e222a5b85c0a07ff19adf7c1e93de3bc4/: request_queue.jsonl  state.json
docs/: API_ERRORS.md  ARCHITECTURE.md  CONFIG_REGISTRY.md  CONTRIBUTING.md  CUTOVER_DEPS.md  CUTOVER_SUMMARY.md  DATABASE_MIGRATIONS.md  DATA_PROTECTION.md  DB_SCHEMA.md  DEPLOYMENT.md  DURABLE_STATEMACHINE_DESIGN.md  ENV_VARS.md  FRONTEND_MODULE_STANDARD.md  GOLDEN_RULES.md  HONESTY_AUDIT.md  LLM_INTEGRATION.md  MALWARE_VR_DECONTAMINATION.md  MASVS_AUDIT.md  MODULE_AGENT_GUIDE.md  MODULE_AI_CONTEXT.md  MODULE_STANDARD.md  MODULE_TUTORIAL.md  MY_VIOLATIONS.md  OPENAPI_NOTES.md  PITFALL_GUIDE.md  PLATFORM_INTERNALS.md  PRODUCTION_RUBRIC.md  QUICKSTART.md  SECURITY_MODEL.md  SSE_GUIDE.md  TASK_QUEUE_OPS.md  TEST_GUIDE.md  VR_FRONTEND_GAP_AUDIT.md  VR_FRONTEND_PROMISE_AUDIT.md  VR_FRONTEND_PROMISE_AUDIT_REALITY_CHECK.md  VR_FRONTEND_UX_DISCUSSION.md  VR_FUZZING_STRATEGY_DISCOVERY_DISCUSSION.md  VR_HYPOTHESIS_ENGINE_INTEGRATION.md  VR_INSTALLATION_GUIDE.md  VR_MODULE_ANALYSIS_DISCUSSION.md  (+18 more)
docs/ADR/: ADR-001-jwt-auth-hs256-blacklist.md  ADR-002-sqlite-redis-hybrid.md  ADR-003-module-protocol-autodiscovery.md  ADR-004-configregistry-resolution-chain.md  ADR-005-single-concurrent-scan.md
docs/forensics/: README.md
docs/vr/: 01_REASONING_LOOP.md  02_IDA_HEADLESS_MCP.md  03_EXPLOIT_AUTOMATION.md  04_MULTI_TARGET.md  05_OBLIGATION_SYSTEM.md  06_COMPETITIVE_LANDSCAPE.md  07_DATA_MODEL.md  08_FRONTEND_UX.md  09_ADDITIONAL_TOPICS.md
frontend/: .env.example  .gitignore  TEST-REPORT.md  honesty_whitelist.js  index.html  package-lock.json  package.json  playwright.config.ts  ts_errors.txt  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts  test-runner.ts
frontend/public/: sw.js
frontend/scripts/: capture-themes.mjs
frontend/src/: main.tsx  vite-env.d.ts
frontend/tests/: cross-browser-smoke.md
infra/postgres-init/: 01-extensions.sql
infra/utilities/: docker-compose.full.yml  docker-compose.yml
scripts/: db_init.py  dev_all.py  portfree.py  reembed_knowledge.py  refresh_audit_mcp_indexes.py  teardown.sh  vr_masvs_report_yanimda.py
src/aila/: __init__.py  _dotenv.py  alembic.ini  cli.py  config.py  logging.py  logging_config.py
tests/: conftest.py  test_83_task_progress_storage_deep_review.py  test_84_task_constants_platform_config.py  test_85_protocol_deep_review.py  test_87_vulnerability_module_core.py  test_90_workflow_db_models_deep_review.py  test_91_cli_config.py  test_adapter_string_decode.py  test_agent_knowledge_retrieval.py  test_agent_knowledge_wiring.py  test_aila_fuzz_reporter_scrapers.py  test_asset_tags_tool.py  test_base_provider_client.py  test_baseline.py  test_blast_radius.py  test_config_memoization.py  test_config_registry.py  test_config_registry_get_sync.py  test_cve_arrivals.py  test_database_engine_lock.py  test_debian_arch_strip.py  test_digest_tool.py  test_e2e.py  test_e2e_live.py  test_event_emitter.py  test_executive_reporting.py  test_feedback_cli.py  test_filter_report_rows.py  test_forensics_resolver_idempotency.py  test_heat_map.py  test_hello_world_smoke.py  test_honesty_audit.py  test_http_capabilities.py  test_ida_bridge_address_coercion.py  test_ida_bridge_hardening.py  test_infra_death_classifier.py  test_intel_batch.py  test_intel_plan_enrichment_batch.py  test_intel_service.py  test_inventory_drift.py  (+84 more)
tests/agents/: test_malware_tool_executor_characterization.py  test_vr_tool_executor_characterization.py
tests/api/: __init__.py  conftest.py  test_103_concurrent_stress.py  test_104_bulk_atomicity_stress.py  test_105_redis_failure_resilience.py  test_107_input_fuzzing.py  test_108_injection_overflow.py  test_138_01_auth.py  test_138_02_bugfixes.py  test_138_03_endpoints.py  test_138_04_discovery.py  test_167_team_isolation.py  test_176c_sessions_list.py  test_53_01_app_autodiscovery.py  test_53_01_module_route_spec.py  test_53_04_vulnerability_router.py  test_55_02_system_crud.py  test_55_03_scan_submit.py  test_55_04_sessions.py  test_55_05_mutations.py  test_55_vuln_router_slice.py  test_56_01_scan_sse.py  test_56_02_chat_sse.py  test_57_export.py  test_59_01_import_cycles.py  test_60_sse_hardening.py  test_88_vulnerability_api_router.py  test_89_reporting_deep_review.py  test_93_rbac_exhaustive_matrix.py  test_94_token_lifecycle.py  test_96_sse_streaming_verification.py  test_admin_god_tier_gate.py  test_admin_lifecycle_api.py  test_admin_prompts.py  test_admin_workflows.py  test_api_key_team_scope.py  test_app_deps_deep_review.py  test_audit_atomic_commit.py  test_audit_router.py  test_audit_seals.py  (+95 more)
tests/integration/: conftest.py  test_parity_scoring.py  test_parity_synthesis.py
tests/modules/: test_template_scaffold.py  test_workspace_constraint_names.py
tests/platform/: __init__.py  conftest.py  test_167_auth_cache.py  test_167_team_scope.py  test_arq_purge_config_url.py  test_audit_team_stamp.py  test_auto_steering.py  test_branch_pool.py  test_bridge_module_id.py  test_cursor_reaper_zombie.py  test_embedding_encode_async.py  test_event_loop_offload.py  (+35 more)
(+1672 files in other folders)
