[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aila"
version = "7.0.0"
description = "Modular AI security platform with pluggable analysis modules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "croniter==6.2.2",
  "cryptography==48.0.1",  # CVE-fix bump (GHSA: vulnerable OpenSSL in cryptography wheels < 48.0.1)
  "filelock==3.25.2",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "paramiko==5.0.0",  # CVE-2026-44405 (SHA-1 in rsakey.py): vuln_range <= 4.0.0; 5.0.0 is implicitly unaffected
  "pwdlib[bcrypt]==0.3.0",
  "argon2-cffi==25.1.0",
  "slowapi==0.1.9",
  "python-dotenv==1.2.2",
  "pydantic==2.11.7",
  "PyJWT==2.13.0",  # CVE-fix bump (PYSEC-2026-175/177/178/179, all fixed in 2.13.0)
  "sentence-transformers==5.3.0",

  "asyncpg==0.31.0",
  "psycopg[binary]==3.3.3",
  "alembic==1.18.4",
  "pgvector==0.4.2",
  "sqlmodel==0.0.37",
  "typer==0.24.1",
  "uvicorn==0.43.0",
  "arq==0.27.0",
  "redis==5.3.1",
  "openai==2.30.0",
  "prometheus-client==0.22.1",
  "tiktoken==0.12.0",
  "openpyxl==3.1.5",
  "structlog==25.5.0",
  "sqlalchemy==2.0.45",
  "jinja2==3.1.6",
  "reportlab==4.5.1",
  'python-magic==0.4.27; platform_system != "Windows"',
  'python-magic-bin==0.4.14; platform_system == "Windows"',
  # ──────────────────────────────────────────────────────────────
  # Transitive-dep CVE pins (Dependabot 30-high triage, 2026-06-11).
  # These packages are pulled in by fastapi / reportlab / httpx /
  # alembic / requests-via-pip-audit; pinning floor versions here
  # forces every operator deploy to pick up the patched releases
  # rather than whatever the upstream resolver happens to land on.
  # Each pin pairs with a CVE / PYSEC reference; bump the floor
  # when a higher version becomes available.
  # ──────────────────────────────────────────────────────────────
  "starlette>=1.0.1",   # PYSEC-2026-161 (fastapi backbone)
  "urllib3>=2.7.0",     # PYSEC-2026-141/142 (HTTP transport)
  "requests>=2.33.0",   # CVE-2026-25645 (HTTP client)
  "idna>=3.15",         # CVE-2026-45409 (domain parsing)
  "pillow>=12.2.0",     # 5 CVEs incl PYSEC-2026-165, CVE-2026-25990/40192/42309/42310/42311 (reportlab image)
  "lxml>=6.1.0",        # PYSEC-2026-87 (XML parsing)
  "mako>=1.3.12",       # CVE-2026-44307 (alembic templating)
  "gitpython>=3.1.50",  # GHSA-mv93-w799-cj2w (used transitively)
  "pygments>=2.20.0",   # CVE-2026-4539 (used by structlog / docs)
  "tornado>=6.5.5",     # PYSEC-2026-140 + 3 CVEs (used by jupyter-tooling deps)
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pytest>=9.0.3",  # CVE-2025-71176 fixed in 9.0.3
  "pytest-cov>=5.0.0",
  "pytest-randomly>=3.15.0",
  "ruff>=0.5.0",
  "types-paramiko>=3.4.0",
  "vulture>=2.11",
  "pip-audit>=2.7.0",
  "bandit>=1.8.0",
  "pre-commit>=4.0.0",
]
pdf-weasyprint = [
  # Optional: enables the WeasyPrint HTML→PDF renderer when GTK
  # runtime is available on the host. The default PDF renderer
  # (ReportLab, in core deps) does NOT require this.
  "weasyprint>=62.0",
]
server = [
  "gunicorn>=25.3.0",
]

[project.scripts]
aila = "aila.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring live infrastructure (deselect with '-m not e2e')",
    "integration: integration tests requiring real API keys (deselect with '-m not integration')",
]
addopts = "--cov=src/aila --cov-report=term-missing -m 'not e2e and not integration'"
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.coverage.run]
source = ["src/aila"]
omit = [
    "src/aila/modules/_template/*",
    "src/aila/__main__.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.honesty_audit]
# Run: python -m aila.tools.honesty_audit src/ --whitelist honesty_whitelist.py
# Exit non-zero on findings. Add to CI alongside vulture.
paths = ["src/"]
whitelist = "honesty_whitelist.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "W",      # pycodestyle warnings
  "I",      # isort
  "UP",     # pyupgrade
  "BLE",    # flake8-blind-except (BLE001)
  "E7",     # pycodestyle comparison rules (E712: comparison to True/False)
  "N",      # pep8-naming (N802: function name not lowercase)
  "PLC",    # pylint convention (PLC0415: import not at top-level)
]
ignore = [
  "E501",  # line too long -- handled by formatter, not lint
]

# ---------------------------------------------------------------------------
# Per-file ignores: legitimate suppressions that cannot be inlined as # noqa
#
# All entries here correspond to entries in src/aila/tools/honesty_whitelist.py
# which documents the justification for each suppression.
# ---------------------------------------------------------------------------
[tool.ruff.lint.per-file-ignores]

# Alembic migration files -- append-only DDL with unconventional import patterns.
"src/aila/alembic/env.py" = ["E402", "F401"]
"src/aila/alembic/versions/*.py" = ["ALL"]

# All other suppressions are documented in src/aila/tools/honesty_whitelist.py.
"src/aila/api/app.py" = ["PLC0415", "BLE001", "F401", "ARG001", "E402", "N814"]
"src/aila/api/auth.py" = ["PLC0415"]
"src/aila/api/auth_cache.py" = ["PLW0603"]
"src/aila/api/deps.py" = ["PLC0415"]
"src/aila/api/errors/handlers.py" = ["B009"]
"src/aila/api/limiter.py" = ["BLE001"]
"src/aila/api/middleware/__init__.py" = ["E402", "F401"]
"src/aila/api/middleware/idempotency.py" = ["BLE001", "ANN001"]
"src/aila/api/routers/admin_dead_letter.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/auth.py" = ["PLC0415"]
"src/aila/api/routers/automation.py" = ["PLC0415"]
"src/aila/api/routers/cost.py" = ["PLC0415"]
"src/aila/api/routers/dashboard.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/executive.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/findings_workflow.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/health.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/notifications.py" = ["E712"]
"src/aila/api/routers/oidc.py" = ["PLC0415", "BLE001", "E712"]
"src/aila/api/routers/saved_filters.py" = ["E712"]
"src/aila/api/routers/scans.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/scheduled_reports.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/search.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/sessions.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/systems.py" = ["PLC0415", "BLE001"]
"src/aila/api/routers/tags.py" = ["PLC0415"]
"src/aila/api/routers/tasks.py" = ["PLC0415", "BLE001", "ANN201"]
"src/aila/api/routers/tools.py" = ["BLE001"]
"src/aila/api/routers/topology.py" = ["PLC0415", "BLE001", "ARG001"]
"src/aila/api/routers/users.py" = ["PLC0415", "BLE001"]
"src/aila/api/schemas/cost.py" = ["PLC0415"]
"src/aila/_dotenv.py" = ["PLC0415"]
"src/aila/cli.py" = ["PLC0415", "E402"]
"src/aila/modules/_template/module.py" = ["PLC0415", "PIE790"]
"src/aila/modules/forensics/agents/investigator.py" = ["PLC0415"]
"src/aila/modules/forensics/agents/resolver_agent.py" = ["PLC0415"]
"src/aila/modules/forensics/api_router.py" = ["PLC0415", "BLE001", "N806"]
"src/aila/modules/forensics/module.py" = ["PLC0415", "E402"]
"src/aila/modules/forensics/reporting/writeup_builder.py" = ["PLC0415"]
"src/aila/modules/forensics/runtime.py" = ["PLC0415"]
"src/aila/modules/forensics/scripts/dryrun_collection.py" = ["PLC0415"]
"src/aila/modules/forensics/services/evidence_classifier.py" = ["PLC0415"]
"src/aila/modules/forensics/services/file_retriever.py" = ["PLC0415"]
"src/aila/modules/forensics/services/machine_readiness.py" = ["PLC0415"]
"src/aila/modules/forensics/services/offline_installer.py" = ["PLC0415"]
"src/aila/modules/forensics/tool_catalog.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/_ssh_helper.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/artifact_query.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/carving_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/dd_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/dissect_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/evidence_intake.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/ghidra_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/registry_viewer.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/script_tool.py" = ["PLC0415", "BLE001"]
"src/aila/modules/forensics/tools/strings_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/tshark_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/vol_symbols.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/volatility_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/yara_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/tools/zeek_runner.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/definitions.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/emitter.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collection.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collectors/_ghidra_stage.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collectors/binary_analysis.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collectors/disk.py" = ["PLC0415", "E402"]
"src/aila/modules/forensics/workflow/states/collectors/memory.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collectors/memory_enrich.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/collectors/network.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/deep_analysis.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/intake.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/promotion.py" = ["PLC0415", "E402"]
"src/aila/modules/forensics/workflow/states/resolution.py" = ["PLC0415"]
"src/aila/modules/forensics/workflow/states/writeup.py" = ["PLC0415"]
"src/aila/modules/hello_world/module.py" = ["PLC0415"]
# malware/agents/auto_steering.py: PLW0603 for single module-level
# _consecutive_failures counter; BLE001 because auto-steering must
# never fail loud (a steering-time exception would silently break
# every branch's next turn) -- the broad catch is intentional.
"src/aila/modules/malware/agents/auto_steering.py" = ["PLW0603", "BLE001"]
"src/aila/modules/malware/agents/malware_researcher.py" = ["PLC0415"]
"src/aila/modules/malware/agents/outcome_dispatcher.py" = ["PLC0415"]
# malware/api_router.py: PLC0415 for the deferred workflow.task imports
# in _enqueue_*; N814 for Settings shadowing of standard config; SLF001
# for the internal mcp_registry._probe / bridge._resolve_base_url calls
# that the operator-side MCP probe endpoint needs.
"src/aila/modules/malware/api_router.py" = ["PLC0415", "N814", "SLF001"]
"src/aila/modules/malware/module.py" = ["PLC0415"]
"src/aila/modules/malware/runtime.py" = ["PLC0415"]
# malware/services/arq_purge.py: S301 because ARQ stores job payloads
# as raw pickle blobs; the helper reads them back from a trusted ARQ
# queue, NOT from untrusted input. Replacing pickle would mean
# re-encoding every queued job during a long deploy.
"src/aila/modules/malware/services/arq_purge.py" = ["PLC0415", "S301"]
# malware/services/branch_reaper.py: N806 for SQLAlchemy ORM uppercase
# aliases (BR, INV) following the standard convention used across
# every sweep helper.
"src/aila/modules/malware/services/branch_reaper.py" = ["N806"]
# malware/services/config_helpers.py: PLW0603 for the lazy registry
# singleton (one instance per worker; constructed once on first read).
"src/aila/modules/malware/services/config_helpers.py" = ["PLW0603"]
# malware/services/investigation_reaper.py: same N806 rationale as
# branch_reaper above; multiple ORM aliases inside the sweep helpers.
"src/aila/modules/malware/services/investigation_reaper.py" = ["N806"]
# malware/services/mcp_call_logger.py: BLE001 because the call logger
# catches BaseException only to re-raise it after enriching the log
# record; the broad catch is an explicit observation point.
"src/aila/modules/malware/services/mcp_call_logger.py" = ["BLE001"]
"src/aila/modules/malware/services/stall_recovery.py" = ["PLC0415"]
"src/aila/modules/malware/workflow/definitions.py" = ["PLC0415"]
# finalize + investigation_emit / _setup keep targeted deferred imports of
# `workflow.task` symbols (run_malware_investigate / run_malware_synthesis /
# run_malware_claim_verifier). Promoting those would re-introduce the
# task-registration import cycle these states sit inside of.
"src/aila/modules/malware/workflow/finalize.py" = ["PLC0415"]
"src/aila/modules/malware/workflow/states/investigation_emit.py" = ["PLC0415"]
"src/aila/modules/malware/workflow/states/investigation_loop.py" = ["PLC0415", "PLW0603"]
"src/aila/modules/malware/workflow/states/investigation_setup.py" = ["PLC0415", "PLW0603"]
"src/aila/modules/vr/_task_queue.py" = ["PLC0415"]
"src/aila/modules/vr/agents/auto_steering.py" = ["BLE001", "PLW0603"]
"src/aila/modules/vr/agents/outcome_dispatcher.py" = ["PLC0415"]
"src/aila/modules/vr/agents/synthesis_agent.py" = ["PLC0415"]
"src/aila/modules/vr/agents/vuln_researcher.py" = ["PLC0415"]
"src/aila/modules/vr/api_router.py" = ["N814", "PLC0415", "SLF001"]
"src/aila/modules/vr/module.py" = ["PLC0415"]
"src/aila/modules/vr/reporting/pdf_report.py" = ["N802", "S603", "S607"]
"src/aila/modules/vr/reporting/writer_agent.py" = ["PLC0415"]
"src/aila/modules/vr/runtime.py" = ["PLC0415"]
"src/aila/modules/vr/services/arq_purge.py" = ["PLC0415", "S301"]
"src/aila/modules/vr/services/branch_reaper.py" = ["N806"]
"src/aila/modules/vr/services/cve_intel_resolver.py" = ["PLC0415"]
"src/aila/modules/vr/services/investigation_finalizers.py" = ["PLC0415"]
"src/aila/modules/vr/services/investigation_reaper.py" = ["N806", "PLC0415"]
"src/aila/modules/vr/services/mcp_call_logger.py" = ["BLE001"]
"src/aila/modules/vr/services/outcome_review.py" = ["PLC0415"]
"src/aila/modules/vr/services/stall_recovery.py" = ["PLC0415"]
"src/aila/modules/vr/services/target_analysis.py" = ["PLC0415"]
"src/aila/modules/vr/workflow/definitions.py" = ["PLC0415"]
"src/aila/modules/vr/workflow/finalize.py" = ["PLC0415"]
"src/aila/modules/vr/workflow/states/investigation_emit.py" = ["PLC0415"]
"src/aila/modules/vr/workflow/states/investigation_loop.py" = ["PLW0603"]
"src/aila/modules/vr/workflow/states/investigation_setup.py" = ["PLC0415", "PLW0603"]
"src/aila/modules/vr/workflow/task.py" = ["F401"]
"src/aila/modules/vulnerability/adapters/arch.py" = ["PLC0415"]
"src/aila/modules/vulnerability/adapters/ghsa.py" = ["PLC0415", "BLE001"]
"src/aila/modules/vulnerability/agents/scoring/agent.py" = ["BLE001"]
"src/aila/modules/vulnerability/api_router.py" = ["PLC0415", "BLE001", "E712", "A002", "N814"]
"src/aila/modules/vulnerability/evidence_validator.py" = ["PLC0415"]
"src/aila/modules/vulnerability/module.py" = ["PLC0415", "BLE001"]
"src/aila/modules/vulnerability/providers/_base_client.py" = ["BLE001"]
"src/aila/modules/vulnerability/reporting/export_service.py" = ["PLC0415"]
"src/aila/modules/vulnerability/reporting/pdf.py" = ["PLC0415"]
"src/aila/modules/vulnerability/runtime.py" = ["PLC0415"]
"src/aila/modules/vulnerability/services/advisory.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/asset_tags.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/baseline.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/blast_radius.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/cve_arrivals.py" = ["PLC0415", "F401"]
"src/aila/modules/vulnerability/tools/heat_map.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/intel_cache.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/inventory_drift.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/kb_insights.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/mttr.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/patch_playbook.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/peer_compare.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/profiles.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/remediation.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/risk_posture.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/scheduled_scans.py" = ["PLC0415", "E402"]
"src/aila/modules/vulnerability/tools/scoring_audit.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/scoring_policy.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/service_check.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/sla_breach.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/tag_risk.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/verify_remediation.py" = ["PLC0415"]
"src/aila/modules/vulnerability/tools/what_if.py" = ["PLC0415"]
"src/aila/modules/vulnerability/workflow/definitions.py" = ["PLC0415"]
"src/aila/modules/vulnerability/workflow/emitter.py" = ["ARG002"]
"src/aila/modules/vulnerability/workflow/planning.py" = ["BLE001"]
"src/aila/modules/vulnerability/workflow/selection.py" = ["PLC0415"]
"src/aila/modules/vulnerability/workflow/services.py" = ["PLC0415"]
"src/aila/modules/vulnerability/workflow/states/reporting.py" = ["ARG001"]
"src/aila/modules/vulnerability/workflow/utils/row_helpers.py" = ["PLC0415"]
"src/aila/platform/automation/runner.py" = ["E712"]
"src/aila/platform/contracts/persist.py" = ["PLC0415"]
"src/aila/platform/contracts/reasoning.py" = ["PLC0415"]
"src/aila/platform/events/emitter.py" = ["PLC0415"]
"src/aila/platform/llm/classify.py" = ["PLC0415"]
"src/aila/platform/llm/client.py" = ["BLE001", "PLC0415", "PLW0603"]
"src/aila/platform/llm/config.py" = ["PLC0415"]
"src/aila/platform/llm/cost.py" = ["PLC0415"]
"src/aila/platform/llm/drift.py" = ["PLC0415"]
"src/aila/platform/llm/gate.py" = ["PLC0415"]
"src/aila/platform/llm/human_cost.py" = ["PLC0415"]
"src/aila/platform/llm/idempotency_cache.py" = ["PLC0415"]
"src/aila/platform/llm/pipeline.py" = ["BLE001"]
"src/aila/platform/llm/seal.py" = ["PLC0415"]
"src/aila/platform/llm/validate.py" = ["PLC0415"]
"src/aila/platform/llm/verify.py" = ["PLC0415"]
"src/aila/platform/mcp/adapters/audit_mcp.py" = ["PLC0415"]
"src/aila/platform/mcp/bridges/android_mcp.py" = ["F821", "PLC0415", "PLW0603"]
"src/aila/platform/mcp/bridges/audit_mcp.py" = ["TRY300"]
"src/aila/platform/modules/builtin.py" = ["PLC0415"]
"src/aila/platform/modules/platform.py" = ["PLC0415"]
"src/aila/platform/modules/registry.py" = ["PLC0415"]
"src/aila/platform/routing/router.py" = ["PLC0415", "BLE001"]
"src/aila/platform/runtime/builder.py" = ["PLC0415"]
"src/aila/platform/services/embedding.py" = ["PLC0415"]
"src/aila/platform/services/health_probes.py" = ["PLC0415", "BLE001"]
"src/aila/platform/services/knowledge.py" = ["PLC0415"]
"src/aila/platform/services/reasoning.py" = ["E402"]
"src/aila/platform/services/redis_pool.py" = ["PLW0603"]
"src/aila/platform/services/report.py" = ["PLC0415"]
"src/aila/platform/services/ssh.py" = ["PLC0415"]
"src/aila/platform/services/system.py" = ["PLC0415"]
"src/aila/platform/services/team_scope.py" = ["PLW0603", "ANN001"]
"src/aila/platform/tasks/__init__.py" = ["PLC0415", "BLE001"]
"src/aila/platform/tasks/discovery.py" = ["PLC0415", "BLE001", "ARG001"]
"src/aila/platform/tasks/hooks.py" = ["PLC0415", "BLE001"]
"src/aila/platform/tasks/progress.py" = ["PLC0415"]
"src/aila/platform/tasks/queue.py" = ["PLC0415", "BLE001"]
"src/aila/platform/tasks/report_tasks.py" = ["PLC0415", "BLE001"]
"src/aila/platform/tasks/sweeps.py" = ["BLE001"]
"src/aila/platform/tasks/template.py" = ["PLC0415", "BLE001"]
"src/aila/platform/tasks/worker.py" = ["PLC0415", "BLE001", "F401", "ARG001"]
"src/aila/platform/tools/_common.py" = ["PLC0414"]
"src/aila/platform/tools/knowledge.py" = ["PLC0415"]
"src/aila/platform/workflows/engine.py" = ["BLE001", "PLC0415"]
"src/aila/platform/workflows/errors.py" = ["N818"]
"src/aila/platform/workflows/log.py" = ["PLC0415", "BLE001"]
"src/aila/storage/database.py" = ["PLC0415"]
"src/aila/storage/db_models.py" = ["E402", "F401"]
"src/aila/storage/operations.py" = ["PLC0415"]
"src/aila/storage/registry.py" = ["PLC0415"]
"src/aila/storage/secrets.py" = ["PLC0415", "E402"]
"src/aila/tools/honesty_audit.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["aila"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# Third-party libraries without complete stubs -- suppress at module boundary
[[tool.mypy.overrides]]
module = [

  "sentence_transformers.*",
  "asyncpg.*",
  "pgvector.*",
  "sqlmodel.*",
  "weasyprint.*",
  "croniter.*",
]
ignore_errors = true

# Storage layer: SQLAlchemy/SQLModel dynamic ORM patterns need targeted fixes
[[tool.mypy.overrides]]
module = ["aila.storage.*"]
ignore_errors = true

# Modules with complex dynamic dispatch -- fix in follow-up
[[tool.mypy.overrides]]
module = [
  "aila.modules.vulnerability.workflow.states.*",
  "aila.modules.vulnerability.adapters.*",
]
ignore_errors = true
